# ZeligChoice version 0.9-3

- README additions.

# ZeligChoice version 0.9-2

- Resolves compatability issue with Zelig 5.0-14.