@@ -4,4 +4,4 @@ README.md
 images
 ^\.travis\.yml$
 ^README\.Rmd$
-^README-.*\.png$
+^README_files/*
