@@ -15,7 +15,7 @@ Description: Add-on package for Zelig 5. Enables the use of a variety of logit
 URL: https://cran.r-project.org/package=ZeligChoice
 BugReports: https://github.com/IQSS/Zelig/issues
 Version: 0.9-2
-Date: 2017-2-01
+Date: 2017-02-06
 Imports:
     methods,
     Zelig (>= 5.0-14),
