@@ -12,7 +12,7 @@ knitr::opts_knit$set(
 
 # ZeligChoice
 
-<a href="http://zeligproject.org"><img src="images/zelig.png" align="left" height="80" vspace="8" hspace="18"></a>
+<a href="http://zeligproject.org"><img src="README_files/img/zelig.png" align="left" height="80" vspace="8" hspace="18"></a>
 
 [![Travis-CI Build Status](https://travis-ci.org/IQSS/ZeligChoice.svg?branch=master)](https://travis-ci.org/IQSS/ZeligChoice)
 [![codecov](https://codecov.io/gh/IQSS/ZeligChoice/branch/master/graph/badge.svg)](https://codecov.io/gh/IQSS/ZeligChoice)
@@ -24,11 +24,36 @@ Project page and publications available at:
 http://zeligproject.org
 
 
-![Example Page](images/output2.png)
+![Example Page](README_files/img/output2.png)
 
 ## Use
 
-Please see the [Zelig Quickstart Guide](https://github.com/IQSS/Zelig/blob/master/README.md) for information on the Zelig Workflow.
+ZeligChoice follows the same workflow as core [Zelig](https://github.com/IQSS/Zelig#zelig-5-workflow-overview).
+
+Here us a simple example using the Zelig 4 wrappers (you can also use Zelig 5
+reference classes):
+
+```{r message=FALSE}
+# Load required packages
+library(Zelig)
+library(ZeligChoice)
+
+# Load example data
+data(mexico)
+
+# Extimate model
+z.out <- zelig(as.factor(vote88) ~ pristr + othcok + othsocok,
+               model = "mlogit", data = mexico)
+
+# Set fitted values
+x.out <- setx(z.out)
+
+# Simulate quantities of interest
+s.out <- sim(z.out, x.out)
+
+# Plot results
+plot(s.out)
+```
 
 ## Installation
 
