@@ -1,6 +1,9 @@
 # ZeligChoice version 0.9-3
 
-- README additions.
+- README dynamically generated example.
+
+- Solve bug where `model-mlogit` wouldn't create simulations due to a missing
+reference level. #15
 
 # ZeligChoice version 0.9-2
 
